Closed Bug 332830 Opened 19 years ago Closed 19 years ago

Mingw build errors in nsWindow.h and nsWindow.cpp

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: emk)

References

Details

Attachments

(2 files)

I get a pile of build errors now when trying to update my mingw debug build. My guess this is happening because of the fix for bug 330276. ive/c/mozilla/mozilla/widget/src/windows/nsWindow.cpp In file included from c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:58: c:/mozilla/mozilla/widget/src/windows/nsWindow.h:234: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.h:234: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.h:324: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.h:324: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.h:348: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.h:348: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.h:349: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.h:349: error: syntax error before `)' token c:/mozilla/mozilla/widget/src/windows/nsWindow.h:438: error: 'HIMC' is used as a type, but is not defined as a type. c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:189: error: syntax error before `__attribute__' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In constructor ` nsWindow::nsWindow()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:811: error: `mOldIMC' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:811: error: (Each undeclared identifier is reported only once for each function it appears in.) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::StandardWindowCreate(nsIWidget*, const nsRect&, nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*, nsWidgetInitData*, void*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:1433: warning: passing NULL used for non-pointer argument passing 5 of `HWND__* CreateDialogIndirectParamA(HINSTANCE__*, const DLGTEMPLATE*, HWND__*, BOOL (*)(HWND__*, unsigned int, unsigned int, long int), long int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:1433: warning: argument to non-pointer type `long int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::Destroy()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:1592: error: `:: ImmAssociateContext' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual void* nsWindow::GetNativeData(unsigned int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3005: warning: cast to pointer from integer of different size c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnKeyDown(unsigned int, unsigned int, long int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3360: error: ` WM_IME_STARTCOMPOSITION' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3361: error: ` WM_IME_COMPOSITION' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In function `nsresult HeapDump(const char*, const char*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3969: warning: unused variable `PRUint32 written' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `void nsWindow::DispatchPendingEvents()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4057: warning: passing NULL used for non-pointer argument passing 3 of `BOOL EnumChildWindows(HWND__*, BOOL (*)(HWND__*, long int), long int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4057: warning: argument to non-pointer type `long int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual PRBool nsWindow::ProcessMessage(unsigned int, unsigned int, long int, LRESULT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4601: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4723: warning: unused variable `PRBool result' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4968: warning: unused variable `HPALETTE__*hOldPal' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4971: warning: unused variable `int i' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5004: error: ` WM_IME_ENDCOMPOSITION' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5008: error: `WM_IME_CHAR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5014: error: `WM_IME_NOTIFY' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5024: error: `WM_IME_SELECT' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5028: error: ` WM_IME_SETCONTEXT' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5063: warning: unused variable `nsresult rv' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4074: warning: unused variable `UINT vkKeyCached' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: At global scope: c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6381: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6381: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `void nsWindow::HandleTextEvent(...)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6394: error: `aCheckAttr' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6420: error: `CANDIDATEFORM' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6420: error: syntax error before `;' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6421: error: `candForm' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6422: error: `CFS_EXCLUDE' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6435: error: `:: ImmSetCandidateWindow' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6435: error: `hIMEContext' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: At global scope: c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6472: error: syntax error before `)' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::HandleStartComposition(...)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6489: error: syntax error before `;' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6502: error: ` CFS_CANDIDATEPOS' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In function `PRUint32 PlatformToNSAttr(unsigned char)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6573: error: ` ATTR_INPUT_ERROR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6575: error: `ATTR_INPUT' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6577: error: `ATTR_CONVERTED ' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6579: error: ` ATTR_TARGET_NOTCONVERTED' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6581: error: ` ATTR_TARGET_CONVERTED' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEChar(unsigned char, unsigned char, long int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6682: warning: unused variable `int err' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: At global scope: c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6720: error: `HIMC' was not declared in this scope c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6720: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `void nsWindow::GetCompositionString(...)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6723: error: `:: ImmGetCompositionStringW' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6723: error: `aHIMC' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6723: error: `aIndex' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6724: error: `aStrUnicode' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEComposition(long int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6748: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6760: error: `GCS_RESULTSTR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6780: error: `GCS_COMPSTR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6780: error: `GCS_COMPATTR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6780: error: `GCS_COMPCLAUSE ' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6780: error: `GCS_CURSORPOS' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6869: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6892: error: `:: ImmReleaseContext' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEEndComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6912: error: syntax error before `;' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6914: error: ` IME_PROP_SPECIAL_UI' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6914: error: ` IME_PROP_AT_CARET' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6917: error: `:: ImmGetContext' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMENotify(unsigned int, long int, LRESULT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6992: error: ` IMN_SETOPENSTATUS' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `PRBool nsWindow::OnIMEReconvert(long int, LRESULT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7067: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMESetContext(int, LPARAM&)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7212: error: ` ISC_SHOWUICOMPOSITIONWINDOW' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEStartComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7225: error: syntax error before `;' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::ResetInputState()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7245: error: `HIMC' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7245: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7246: error: `hIMC' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7248: error: `::ImmNotifyIME ' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7248: error: ` NI_COMPOSITIONSTR' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7248: error: `CPS_COMPLETE' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7249: error: `CPS_CANCEL' undeclared (first use this function) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::SetIMEOpenState(int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7262: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7264: error: `:: ImmSetOpenStatus' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::GetIMEOpenState(PRBool*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7273: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7275: error: `:: ImmGetOpenStatus' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::CancelIMEComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7309: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `PRBool nsWindow::HandleMouseActionOfIME(int, POINT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7354: error: syntax error before `=' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7380: error: `:: ImmGetDefaultIMEWnd' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: At global scope: c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7439: error: syntax error before `,' token c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `void nsWindow::GetCompositionWindowPos(...)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7459: error: `:: ImmGetCompositionWindow' undeclared (first use here) c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7459: error: `cpForm' undeclared (first use this function) make[6]: *** [nsWindow.o] Error 1 make[6]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget/src/windows' make[5]: *** [libs] Error 2 make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget/src' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget' make[3]: *** [libs_tier_9] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[2]: *** [tier_9] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla' make: *** [alldep] Error 2 C:\mozilla\mozilla>
<imm.h> is originally included from "aimm.h". We do no longer require the AIMM support, but standard IMM32 types/functions/structures are still required.
Assignee: win32 → VYV03354
Status: NEW → ASSIGNED
Attachment #217320 - Flags: superreview?(roc)
Attachment #217320 - Flags: review?(roc)
Attachment #217320 - Flags: superreview?(roc)
Attachment #217320 - Flags: superreview+
Attachment #217320 - Flags: review?(roc)
Attachment #217320 - Flags: review+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Thanks for the fix, but I'm still getting a build error, now somewhere else: 1\" -DMOZILLA_SKIN_VERSION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdr ive/c/mozilla/mozilla/widget/src/windows/nsWindow.cpp c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:189: error: syntax error before `__attribute__' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In constructor ` nsWindow::nsWindow()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:811: warning: assignment to non-pointer type `HIMC' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:811: warning: argument to non-pointer type `long unsigned int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::StandardWindowCreate(nsIWidget*, const nsRect&, nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*, nsWidgetInitData*, void*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:1433: warning: passing NULL used for non-pointer argument passing 5 of `HWND__* CreateDialogIndirectParamA(HINSTANCE__*, const DLGTEMPLATE*, HWND__*, BOOL (*)(HWND__*, unsigned int, unsigned int, long int), long int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:1433: warning: argument to non-pointer type `long int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual void* nsWindow::GetNativeData(unsigned int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3005: warning: cast to pointer from integer of different size c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In function `nsresult HeapDump(const char*, const char*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:3969: warning: unused variable `PRUint32 written' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `void nsWindow::DispatchPendingEvents()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4057: warning: passing NULL used for non-pointer argument passing 3 of `BOOL EnumChildWindows(HWND__*, BOOL (*)(HWND__*, long int), long int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4057: warning: argument to non-pointer type `long int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual PRBool nsWindow::ProcessMessage(unsigned int, unsigned int, long int, LRESULT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4601: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4723: warning: unused variable `PRBool result' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4968: warning: unused variable `HPALETTE__*hOldPal' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4971: warning: unused variable `int i' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:5063: warning: unused variable `nsresult rv' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:4074: warning: unused variable `UINT vkKeyCached' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEChar(unsigned char, unsigned char, long int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6682: warning: unused variable `int err' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEComposition(long int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6749: warning: NULL used in arithmetic c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6869: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEEndComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:6918: warning: NULL used in arithmetic c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `PRBool nsWindow::OnIMEReconvert(long int, LRESULT*)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7067: warning: comparison between signed and unsigned integer expressions c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `BOOL nsWindow::OnIMEStartComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7231: warning: NULL used in arithmetic c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::ResetInputState()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7248: warning: passing NULL used for non-pointer argument passing 4 of `BOOL ImmNotifyIME(long unsigned int, long unsigned int, long unsigned int, long unsigned int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7248: warning: argument to non-pointer type `long unsigned int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7249: warning: passing NULL used for non-pointer argument passing 4 of `BOOL ImmNotifyIME(long unsigned int, long unsigned int, long unsigned int, long unsigned int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7249: warning: argument to non-pointer type `long unsigned int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::SetIMEEnabled(int)': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7290: warning: argument to non-pointer type `long unsigned int' from NULL c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp: In member function `virtual nsresult nsWindow::CancelIMEComposition()': c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7312: warning: passing NULL used for non-pointer argument passing 4 of `BOOL ImmNotifyIME(long unsigned int, long unsigned int, long unsigned int, long unsigned int)' c:/mozilla/mozilla/widget/src/windows/nsWindow.cpp:7312: warning: argument to non-pointer type `long unsigned int' from NULL make[6]: *** [nsWindow.o] Error 1 make[6]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget/src/windows' make[5]: *** [libs] Error 2 make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget/src' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/widget' make[3]: *** [libs_tier_9] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[2]: *** [tier_9] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla' make: *** [alldep] Error 2
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
This fixes the build error for me.
After that "fix", I'm getting a build error in nsKeyboardLayout.cpp, I've filed bug 333105 for that.
(In reply to comment #4) > Created an attachment (id=217541) [edit] > This fixes the build error for me > > This fixes the build error for me. However this breaks VC6 without PSDK. We can't drop VC6 yet as I said in bug 333460 comment #1.
Depends on: 331433
BTW, my w32api header have the ULW_ALPHA definition. Why does |#ifndef ULW_ALPHA| section affect the mingw build?
(In reply to comment #7) > BTW, my w32api header have the ULW_ALPHA definition. > Why does |#ifndef ULW_ALPHA| section affect the mingw build? Ah sorry, this might have something to do with the fact that my mingw environment was not up to date at the time. I now have updated my mingw environment. I'll recheck whether I still get the build error later today.
Ok, again sorry. The last issue I got was because my build environment was not up to date. So I'm marking this bug fixed again.
Status: REOPENED → RESOLVED
Closed: 19 years ago19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: