Bug 332830 Mingw build errors in nsWindow.h and nsWindow.cpp. patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r+sr=roc